# meneldor_chess_engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  create_build.sh  feature_set.txt  implementation_notes.txt  pvs_debugging.txt  run_clang_format.sh  tasks.txt  testing_notes.txt
app/: CMakeLists.txt  chess_game.cpp  engine_main.cpp  perft.cpp
data/: sigrist.pgn
include/: bitboard.h  board.h  castling_rights.h  chess_types.h  coordinates.h  engine_player.h  feature_toggle.h  game.h  meneldor_engine.h  move.h  move_generator.h  move_orderer.h  my_assert.h  player.h  position.h  transposition_table.h  uci_engine_player.h  user_player.h  utils.h  zobrist_hash.h
notes/: chessx_notes.txt  fast_check_notes.txt  implementation_notes.txt  tasks.txt
output/: game_log.txt  performance_log.txt
scripts/: find_magics.c  perft_compare.py  qperft.c
senjo/senjo/: BackgroundCommand.cpp  EngineOption.cpp  EngineOption.h  MoveFinder.cpp  Parameters.cpp  Platform.h  Thread.cpp  UCIAdapter.cpp  UCIAdapter.h
src/: CMakeLists.txt  bitboard.cpp  board.cpp  chess_types.cpp  coordinates.cpp  engine_player.cpp  feature_toggle.cpp  game.cpp  meneldor_engine.cpp  move.cpp  move_generator.cpp  move_orderer.cpp  player.cpp  transposition_table.cpp  uci_engine_player.cpp  user_player.cpp  utils.cpp  zobrist_hash.cpp
tests/: CMakeLists.txt  engine_tests.cpp  general_tests.cpp  perft_tests.cpp
working_lsp/: compile_commands.json
